--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -4,11 +4,13 @@ title: "Portfolio"
 permalink: /portfolio/
 author_profile: true
 ---
+Curious what I've been up to?
 
+<hr>
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.portfolio reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
